edition = "2023";

package wayplatform.connect.tachograph.dd.v1;

import "google/protobuf/timestamp.proto";
import "wayplatform/connect/tachograph/dd/v1/event_fault_record_purpose.proto";
import "wayplatform/connect/tachograph/dd/v1/event_fault_type.proto";
import "wayplatform/connect/tachograph/dd/v1/full_card_number.proto";

// Information, stored in a vehicle unit, related to over speeding events (Generation 1).
//
// Binary Layout: 31 bytes (fixed for Gen1)
//   - eventType: 1 byte
//   - eventRecordPurpose: 1 byte
//   - eventBeginTime: 4 bytes
//   - eventEndTime: 4 bytes
//   - maxSpeedValue: 1 byte
//   - averageSpeedValue: 1 byte
//   - cardNumberDriverSlotBegin: 18 bytes
//   - similarEventsNumber: 1 byte
//
// See Data Dictionary, Section 2.215, `VuOverSpeedingEventRecord`.
//
// ASN.1 Definition (Gen1):
//
//     VuOverSpeedingEventRecord ::= SEQUENCE {
//         eventType                       EventFaultType,
//         eventRecordPurpose              EventFaultRecordPurpose,
//         eventBeginTime                  TimeReal,
//         eventEndTime                    TimeReal,
//         maxSpeedValue                   SpeedMax,
//         averageSpeedValue               SpeedAverage,
//         cardNumberDriverSlotBegin       FullCardNumber,
//         similarEventsNumber             SimilarEventsNumber
//     }
message VuOverspeedEventRecord {
  // The type of the event.
  //
  // See Data Dictionary, Section 2.70, `EventFaultType`.
  EventFaultType event_type = 1;

  // Stores the raw protocol value when an unrecognized enum value is
  // encountered during parsing.
  int32 unrecognized_event_type = 2;

  // The purpose for which this event has been recorded.
  //
  // See Data Dictionary, Section 2.69, `EventFaultRecordPurpose`.
  EventFaultRecordPurpose record_purpose = 3;

  // Stores the raw protocol value when an unrecognized enum value is
  // encountered during parsing.
  int32 unrecognized_record_purpose = 4;

  // The date and time of beginning of event.
  //
  // See Data Dictionary, Section 2.162, `TimeReal`.
  google.protobuf.Timestamp begin_time = 5;

  // The date and time of end of event.
  //
  // See Data Dictionary, Section 2.162, `TimeReal`.
  google.protobuf.Timestamp end_time = 6;

  // The maximum speed measured during the event in km/h.
  //
  // See Data Dictionary, Section 2.158, `SpeedMax`.
  // ASN.1 Definition:
  //
  //     SpeedMax ::= Speed
  //     Speed ::= INTEGER(0..255)
  int32 max_speed_kmh = 7;

  // The arithmetic average speed measured during the event in km/h.
  //
  // See Data Dictionary, Section 2.157, `SpeedAverage`.
  // ASN.1 Definition:
  //
  //     SpeedAverage ::= Speed
  //     Speed ::= INTEGER(0..255)
  int32 average_speed_kmh = 8;

  // Identifies the card inserted in the driver slot at the beginning of the event.
  //
  // See Data Dictionary, Section 2.73, `FullCardNumber`.
  FullCardNumber card_number_driver_slot_begin = 9;

  // The number of similar events that day.
  //
  // See Data Dictionary, Section 2.151, `SimilarEventsNumber`.
  // ASN.1 Definition:
  //
  //     SimilarEventsNumber ::= INTEGER(0..255)
  int32 similar_events_number = 10;

  // Original encoded bytes from the binary format.
  //
  // When present, this is used as a canvas for the "raw data painting" strategy
  // during marshalling to preserve reserved bits and unknown data. The semantic
  // fields are encoded and painted over this canvas at their designated offsets.
  //
  // Size: 31 bytes (fixed for Gen1).
  bytes raw_data = 99;
}
